--- a/code/Flight_Delay_Analysis.ipynb
+++ b/code/Flight_Delay_Analysis.ipynb
@@ -313,6 +313,7 @@
     }
    ],
    "source": [
+    "#Take a look at the top five data in the dataframe\n",
     "df.head()"
    ]
   },
@@ -369,6 +370,7 @@
     }
    ],
    "source": [
+    "#Count the missing value of each column\n",
     "df.isna().sum()"
    ]
   },
@@ -520,6 +522,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Select the data that are exactly delay\n",
     "tmp = df[df['ArrDelay'] > 0]"
    ]
   },
@@ -810,6 +813,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Calculate the average delay based on time of day\n",
     "part_delay_l = Q1_df.groupby(['time_of_day']).mean()"
    ]
   },
@@ -869,6 +873,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Calculate the avarage delay based on day of week\n",
     "dow_l = Q1_df.groupby(['DayOfWeek']).mean()"
    ]
   },
@@ -928,6 +933,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Calculate the average delay based on the month\n",
     "toy_l = Q1_df.groupby(['Month']).mean()"
    ]
   },
@@ -978,6 +984,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Extract the data with `year` and `month` column and calcuate the number of people flying \n",
     "Q2_df = df[['Year', 'Month']]\n",
     "Q2_df = Q2_df.groupby(['Year', 'Month'], as_index = False).size()"
    ]
@@ -1373,6 +1380,7 @@
     }
    ],
    "source": [
+    "#Set the independent and dependent value for regression\n",
     "x = Q3_df['ArrDelay']\n",
     "y = Q3_df['DepDelay']\n",
     "\n",
@@ -1463,6 +1471,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Copy a dataframe for Q4\n",
     "Q4_df = df.copy()"
    ]
   },
@@ -1862,6 +1871,7 @@
     }
    ],
    "source": [
+    "#Calcualte the correlation between each feature\n",
     "corr = Q4_df.corr()\n",
     "corr"
    ]
@@ -2268,6 +2278,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comparison of the accuracy of the three models"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 102,
    "metadata": {},
@@ -2298,6 +2315,13 @@
     "    \n",
     "plt.title('Accuracy')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comparison of the mean squared error of the three models"
    ]
   },
   {
